[project]
name = "py_prayer_of_hannah"
version = "0.1.0"
description = "Worship Slides"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11.2",
    "python-fasthtml>=0.6.6",
    "sqlmodel>=0.0.22",
    "xmltodict>=0.13.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]