[project]
name = "prayer_of_hannah"
version = "0.1.0"
description = "Worship Slides"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "pytest>=8.3.3",
    "sqlmodel>=0.0.22",
]
pythonpath = "prayer_of_hannah"

[tool.pytest.ini_options]
pythonpath = "prayer_of_hannah"
addopts = [
    "--import-mode=importlib",
]
